Project

General

Profile

Actions

Bug #63648

closed

client: ensure callback is finished if write fails during async I/O

Added by Dhairya Parmar 5 months ago. Updated 5 months ago.

Status:
Closed
Priority:
Normal
Category:
Correctness/Safety
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
quincy,reef
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Client
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

else it will stall the caller


Related issues 1 (0 open1 closed)

Related to CephFS - Bug #63734: client: handle callback when async io failsResolvedDhairya Parmar

Actions
Actions #1

Updated by Dhairya Parmar 5 months ago

let's say if the file is read only, the internal function Client::_write() returns EBADF but doesn't take care of the callback and would lead to the caller waiting indefinitely

Actions #2

Updated by Dhairya Parmar 5 months ago

  • Subject changed from client: ensure callback is finished in case of write failure during async I/O to client: ensure callback is finished if write fails during async I/O
Actions #3

Updated by Dhairya Parmar 5 months ago

  • Status changed from New to In Progress
  • Pull request ID set to 54672
Actions #4

Updated by Dhairya Parmar 5 months ago

  • Status changed from In Progress to Closed
Actions #5

Updated by Dhairya Parmar 5 months ago

  • Related to Bug #63734: client: handle callback when async io fails added
Actions

Also available in: Atom PDF