client: ensure callback is finished if write fails during async I/O

else it will stall the caller

Fixes: https://tracker.ceph.com/issues/63648
Signed-off-by: Dhairya Parmar <dparmar@redhat.com>